# goit-pythonweb-hw-08

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/versions/: a6ba8e75780b_init.py
src/: schemas.py
src/api/: contacts.py  notes.py  tags.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  notes.py  tags.py
src/services/: contacts.py  notes.py  tags.py
